tests/parser/should_fail/InfixAppPatErr.hs
main = do
  f $ do
    a <- return 3
      c <- do
      return 5
