tests/parser/should_fail/InfixAppPatErr.stderr

InfixAppPatErr.hs:2:7: error: [GHC-06446] do-notation in pattern
